--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -7,6 +7,7 @@
         "route53_enabled": true,
         "runtime": "python2.7",
         "memory_size": 512,
-        "slim_handler": true
+        "slim_handler": true,
+        "keep_warm_expression": "rate(1 hour)"
     }
 }
