--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
+sklearn
 numpy
 pandas
 networkx
-matplotlib
-scipy
-sklearn
-flask
 flask-api
-jupyter
-pytest
-pytest-flask
-flexmock
 zappa
+werkzeug
+pytest
